# publication-tracker

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  dumpdata.sh  env.template  manage.py  publicationtrkr.ini  pyproject.toml  requirements.txt  run_server.sh
compose/: docker-compose.yml.local-ssl  docker-compose.yml.prod-ssl
nginx/: default.conf
publicationtrkr/apps/apiuser/: apps.py  models.py  urls.py  views.py
publicationtrkr/apps/publications/: apps.py  forms.py  models.py  urls.py  views.py
publicationtrkr/apps/publications/api/: serializers.py  validators.py  viewsets.py
publicationtrkr/apps/publications/templatetags/: publications_tags.py
publicationtrkr/apps/pubsimple/: apps.py  forms.py  models.py  urls.py  views.py
publicationtrkr/apps/pubsimple/api/: validators.py  (+2 more)
publicationtrkr/server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
publicationtrkr/templates/apiuser/: apiuser_detail.html  apiuser_list.html
publicationtrkr/templates/publications/: author_list.html  author_update.html  publication_author_detail.html  publication_create.html  publication_detail.html  publication_list.html  publication_project_detail.html  publication_project_list.html  publication_update.html
publicationtrkr/templates/publicationtrkr/: base.html  footer.html  home.html  navbar.html
publicationtrkr/templates/pubsimple/: pubsimple_create.html  pubsimple_detail.html  pubsimple_list.html  pubsimple_update.html
publicationtrkr/utils/: core_api.py  fabric_auth.py
scripts/: reset-to-clean.sh
vouch/: config.template
(+7 files in other folders)
